--- a/scss/style.scss
+++ b/scss/style.scss
@@ -124,8 +124,107 @@ a {
 
 .assign-equipment-btn {
   background: #007bff;
+  &:hover {
+    cursor: pointer;
+    background: #0c5db4;
+  }
 }
 
 .view-assign-equipment-btn {
   background: #28a745;
+  &:hover {
+    cursor: pointer;
+    background: #29883f;
+  }
+}
+
+.assign-equipment-popup,
+.view-assign-equipment-popup {
+  display: none;
+  position: fixed;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+.assign-equipment-popup {
+  bottom: 30%;
+  right: 20%;
+}
+
+.view-assign-equipment-popup {
+  bottom: 47%;
+  right: 28%;
+  width: 45vw;
+}
+
+.form-container,
+.popup-wrapper {
+  padding: 20px;
+  background-color: white;
+
+  h1 {
+    text-align: center;
+  }
+}
+
+.form-container input[type="number"],
+.form-container select {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+.form-container input[type="number"]:focus,
+.form-container select:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.form-container button[type="submit"] {
+  background-color: #007bff;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 10px;
+  opacity: 0.8;
+}
+
+.close {
+  display: inline-block;
+  font-size: 1.8rem;
+  position: absolute;
+  top: 0;
+  right: 10px;
+  &:hover {
+    transform: scale(1.3);
+    cursor: pointer;
+  }
+}
+
+.error {
+  display: none;
+  color: red;
+  background-color: white;
+  width: 100%;
+  padding: 15px;
+}
+
+.popup-header,
+.popup-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 10px 0;
+}
+
+.popup-header {
+  margin-top: 15px;
+  font-weight: bold;
+}
+
+.popup-body {
+  margin: 15px auto;
 }
