--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ a {
 .popup-header,
 .popup-body {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   padding: 10px 0; }
 
 .popup-header {
@@ -180,3 +180,37 @@ a {
 
 .popup-body {
   margin: 15px auto; }
+
+.report-wrapper,
+.report-type-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.report-type-form select {
+  margin-top: 15px;
+  padding: 15px;
+  border: none;
+  background: #dbd6d6; }
+
+#report-section {
+  width: 80vw;
+  height: 50vh;
+  margin-top: 20px; }
+
+.equipment-report-table-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  background: black;
+  padding: 36px 18px; }
+  .equipment-report-table-header .header-item {
+    text-transform: uppercase; }
+    .equipment-report-table-header .header-item .header-text {
+      color: white; }
+
+.equipment-table-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100%;
+  padding: 36px 18px; }
