--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: var(--primary-colour); }
 
 li {
@@ -115,8 +115,8 @@ a {
   z-index: 9; }
 
 .assign-equipment-popup {
-  bottom: 30%;
-  right: 20%; }
+  bottom: 40%;
+  right: 30%; }
 
 .view-assign-equipment-popup {
   bottom: 47%;
@@ -143,6 +143,9 @@ a {
 .form-container select:focus {
   background-color: #ddd;
   outline: none; }
+
+.form-container select:focus {
+  cursor: pointer; }
 
 .form-container button[type="submit"] {
   background-color: #007bff;
